--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -4,3 +4,17 @@
 // Bootstrap
 @import "bootstrap/scss/bootstrap";
 @import "@fortawesome/fontawesome-free/css/all.css";
+
+.cyan-300 {
+    background-color: $cyan-300;
+}
+.bg-blue-700 {
+    background-color: $blue-700;
+}
+.bg-blue-300 {
+    background-color: $blue-300;
+}
+
+.bg-blue-100 {
+    background-color: $blue-100;
+}
