--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,3 +7,15 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 $font-poppin: "Poppins", sans-serif;
+$primary: #125a57;
+$white: #fff;
+$blue: #0d6efd;
+$indigo: #6610f2;
+$purple: #6f42c1;
+$pink: #d63384;
+$red: #dc3545;
+$orange: #fd7e14;
+$yellow: #ffc107;
+$green: #198754;
+$teal: #20c997;
+$cyan: #0dcaf0;
