--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -7,7 +7,7 @@ $font-size-base: 0.9rem;
 $line-height-base: 1.6;
 
 $font-poppin: "Poppins", sans-serif;
-$primary: #125a57;
+$primary: #141f99;
 $white: #fff;
 $blue: #0d6efd;
 $indigo: #6610f2;
